fix(search): overflow long links

--- a/site/search/Search.scss
+++ b/site/search/Search.scss
@@ -265,6 +265,7 @@ $reset-button-margin: 16px;
     margin-bottom: 4px;
     color: $blue-60;
     display: block;
+    overflow-wrap: anywhere;
 }
 
 /*
